--- a/style.css
+++ b/style.css
@@ -10,111 +10,120 @@ body {
 }
 
 #marketplace-wrapper {
-    width: 100%;
-    height: 0;
-    background-color: #f0efff;
-    margin: 10vh auto;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 1fr;
-    gap: 16px;
-    grid-template-areas:
-    "grid-logo grid-search"
-    "grid-filters grid-partners"
-    "grid-filters grid-partners"
-    "grid-filters grid-partners";
+  width: 100%;
+  height: 100%;
+  background-color: #f0efff;
+  margin: 10vh auto;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+  "grid-logo grid-search"
+  "grid-filters grid-partners"
+  "grid-filters grid-partners"
+  "grid-filters grid-partners";
 }
 
 #marketplace-logo {
-  display: flex;
-  justify-content: flex-end;
+display: flex;
+justify-content: flex-end;
 }
 
 #marketplace-logo img {
-  grid-area: grid-logo;
-  width: 112px;
-  height: auto;
-  object-fit: contain;
+grid-area: grid-logo;
+width: 112px;
+height: auto;
+object-fit: contain;
 }
 
 #marketplace-search {
-  grid-area: grid-search;
-  display: flex;
-  width: 632px;
-  height: 80px;
-  margin: auto 0 auto 16px;
-  border-style: none;
-  border-radius: 8px;
-  padding-left: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+grid-area: grid-search;
+display: flex;
+width: 632px;
+height: 80px;
+margin: auto 0 auto 16px;
+border-style: none;
+border-radius: 8px;
+padding-left: 16px;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 16px;
 }
 
 #marketplace-filters-container { 
-    grid-area: grid-filters;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    background-color: #f0efff;
+  grid-area: grid-filters;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: #f0efff;
 }
 
 #marketplace-partners { 
-    display: grid;
-    grid-area: grid-partners;
-    width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(332px, 332px));
-    height: 100%;
-    background-color: #f0efff;
-    flex-wrap: wrap;
+  display: grid;
+  grid-area: grid-partners;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(332px, 332px));
+  height: 100%;
+  background-color: #f0efff;
 }
 
+
 #filters label {
-  margin-left: 4px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 40px;
-  padding: 0px;
+margin-left: 4px;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 16px;
+line-height: 40px;
+padding: 0px;
 }
 
 #marketplace-partners li {
-  list-style: none;
-  margin: 16px;
-  font-size: 16px;
-  position: relative;
-  color: #666;
-  width: 300px;
-  height: 300px;
-  background-color: #fff;
-  border-radius: 8px;
+list-style: none;
+margin: 16px;
+font-size: 16px;
+position: relative;
+color: #666;
+width: 300px;
+height: 300px;
+background-color: #fff;
+border-radius: 8px;
+box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+transition: 0.2s;
+transition-timing-function: ease-in-out;
+}
+
+#marketplace-partners li:hover {
+box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+cursor: pointer;
 }
 
 .partner-logo {
-  width: 200px;
-  margin: auto;
+width: 200px;
+margin: 16px auto;
 }
 
 .partner-logo img {
-  width: 200px;
-  margin-top: 10px;
+max-width: 160px;
+height: auto;
+margin: 8px auto;
+display: flex;
 }
 
 .partner-description {
-  width: 200px;
-  margin: auto;
+width: 200px;
+margin: auto;
 }
 
 .headline {
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 48px;
+font-size: 24px;
+font-weight: 600;
+line-height: 48px;
 }
 
 hr {
-  margin: 0 auto 10px auto;
-  width: 85%;
-  border-top: 1px solid #dadada;
-  border-bottom: 1px solid white;
-  border-right: 1px solid white;
-  border-left: 1px solid white;
+margin: 0 auto 10px auto;
+width: 85%;
+border-top: 1px solid #dadada;
+border-bottom: 1px solid white;
+border-right: 1px solid white;
+border-left: 1px solid white;
 }
